[package]
name = "discord-api-proxy"
version = "1.0.1"
edition = "2021"

[features]
default = ["metrics"]
metrics = ["dep:prometheus", "dep:lazy_static"]
trust-dns = ["dep:trust-dns-resolver", "dep:hyper-trust-dns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "net", "time", "rt-multi-thread", "signal"] }

http = "0.2.8"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }

hyper-rustls = { version = "0.23", default-features = false, features = ["webpki-tokio", "http1", "http2"] }

trust-dns-resolver = { version = "0.22.0", optional = true }
hyper-trust-dns = { version = "0.5", default-features = false, optional = true }

axum = { version = "0.6.4", features = [] }

fred = { version = "6.0.0-beta.2", features = ["subscriber-client", "sentinel-auth"] }

serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

prometheus = { version = "0.13.2", optional = true }

futures-util = "0.3.25"
ahash = "0.8.3"
base64 = "0.13.0"
rand = "0.8.5"

env_logger = "0.9.3"
log = "0.4.17"

thiserror = "1.0.34"
lazy_static = { version = "1.4.0", optional = true }

