[package]
name = "discord-api-proxy"
version = "1.0.2"
edition = "2021"

[features]
default = ["metrics"]
metrics = ["dep:prometheus", "dep:lazy_static"]
trust-dns = ["dep:trust-dns-resolver", "dep:hyper-trust-dns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "net", "time", "rt-multi-thread", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

http = "0.2"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }

hyper-rustls = { version = "0.23", default-features = false, features = ["webpki-tokio", "http1", "http2"] }

trust-dns-resolver = { version = "0.22", optional = true }
hyper-trust-dns = { version = "0.5", default-features = false, optional = true }

axum = { version = "0.6", features = [] }
fred = { version = "6.2.1", features = ["subscriber-client", "sentinel-auth"] }

prometheus = { version = "0.13", optional = true }

futures-util = "0.3"
ahash = "0.8"
rand = "0.8"
base64-simd = { version = "0.8.0", features = ["detect"] }

env_logger = "0.9"
log = "0.4"

thiserror = "1.0.34"
lazy_static = { version = "1.4.0", optional = true }

